...
          headerLeft: () => <HeaderLeftButton />,
        }}
      />
      <Stack.Screen
        name="clients/create"
        options={getStackScreenOptions({
          title: 'Create Client Profile',
        })}
      />
      <Stack.Screen
        name="clients/[id]/edit"
        options={getStackScreenOptions()}
      />
...
