...
      */}
      {!hmisProdDemoEnabled && (
        <View
          style={[styles.plusButtonOverlay, { bottom: insets.bottom + 24 }]}
        >
          <Pressable
            testID="main-plus-tab-btn"
            accessibilityRole="button"
            accessibilityLabel="Add"
            accessibilityHint="Opening homepage main modal"
            onPress={() => setIsModalVisible(true)}
            style={({ pressed }) => [
              styles.plusButton,
...
