appId: la.betterangels.dev.app
platform: android
---
- openLink: exp+betterangels://expo-development-client/?url=https://u.expo.dev/${PROJECT_ID}/group/${GROUP_ID}?platform=ios&dev=true&minify=false&disableOnboarding=1
- runFlow:
    when:
      visible: 'Open'
    commands:
      - tapOn: 'Open'
- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn:
          point: 50%,10%
- assertVisible: 'Get Started'
- tapOn: 'Get Started'
- assertVisible: 'Welcome!'
